# Parking_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  collect.yml
data/history/: bordeaux_parkings.parquet
data/interim/: melbourne_street_geo.parquet
models/: model.joblib
notebooks/: 01_exploration.ipynb  02_nettoyage_features.ipynb  03_modele_baseline.ipynb
src/parking/: __init__.py  baseline.py  bordeaux.py  bordeaux_model.py  collect.py  config.py  evaluation.py  features.py  ingestion.py  model.py  predict.py
src/parking/api/: __init__.py  main.py  schemas.py
src/parking/dashboard/: __init__.py  app.py
tests/: conftest.py  test_api.py  test_baseline.py  test_bordeaux_model.py  test_collect.py  test_dashboard.py  test_features.py  test_model.py
