[project]
name = "parking"
version = "0.1.0"
description = "Prédicteur d'occupation de stationnement en rue (Melbourne)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "streamlit>=1.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "joblib>=1.4",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "httpx>=0.27",
]
# Exploration / notebooks (semaines 1-3)
notebook = [
    "matplotlib>=3.9",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
python_version = "3.11"
